Sculpt curve with negative y worked in 2.73, not in 2.74 onward #45013

Closed
opened 2015-06-10 02:00:13 +02:00 by Ryan · 6 comments

System Information
Windows 64 bit

NVIDIA Quadro 2000

Blender Version
Broken: 2.74 000dfc0
Worked: 2.73 b4d8fb5

Short description of errorsculpt_ridge_valley.blend
Assigning a negative value to a curve in sculpt mode used to subtract as expected

newer versions do not accept negative value?

Exact steps for others to reproduce the error

open the blend in 2.73 b4d8fb5 and sculpt- the curve should create a valley and ridge

open the blend in 2.74 onward and sculpt- the curve will only create a ridge. clipping does not accept negative values

**System Information** Windows 64 bit NVIDIA Quadro 2000 **Blender Version** Broken: 2.74 000dfc0 Worked: 2.73 b4d8fb5 **Short description of error**[sculpt_ridge_valley.blend](https://archive.blender.org/developer/F188532/sculpt_ridge_valley.blend) Assigning a negative value to a curve in sculpt mode used to subtract as expected newer versions do not accept negative value? **Exact steps for others to reproduce the error** open the blend in 2.73 b4d8fb5 and sculpt- the curve should create a valley and ridge open the blend in 2.74 onward and sculpt- the curve will only create a ridge. clipping does not accept negative values
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @shiprex

Added subscriber: @shiprex

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Negative values can cause overflow in mask values during sculpting and were disabled, see #42984.
I'll investigate if I can bring back support for negative values somehow if possible.

Negative values can cause overflow in mask values during sculpting and were disabled, see #42984. I'll investigate if I can bring back support for negative values somehow if possible.
Antonis Ryakiotakis self-assigned this 2015-06-10 12:25:34 +02:00

This issue was referenced by 9f911f62dc

This issue was referenced by 9f911f62dcefd3ce4312bb8aa1d522cae6bbf6e9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45013
No description provided.