source/blender/blenkernel/intern/colortools.c
@@ -790,7 +790,17 @@ float curvemap_evaluateF(const CurveMap *cuma, float value)
 float curvemapping_evaluateF(const CurveMapping *cumap, int cur, float value)
 {
 	const CurveMap *cuma = cumap->cm + cur;
-	return curvemap_evaluateF(cuma, value);
+	float val = curvemap_evaluateF(cuma, value);
+
+	/* account for clipping */
+	if (cumap->flag & CUMA_DO_CLIP) {
+		if (val < cumap->curr.ymin)
+			val = cumap->curr.ymin;
+		else if (val > cumap->curr.ymax)
+			val = cumap->curr.ymax;
+	}
+
+	return val;
 }
 
 /* vector case */
